--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Quiz Hub</title>
     <!-- Tailwind CSS Link -->
-    <link href="/dist/output.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
